# ncurses-platform-game

./: CMakeCache.txt  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  Game.cpp  Game.hpp  Main.cpp  Makefile  README.md  cmake_install.cmake  constants.hpp
cpp/cash/: Cash.cpp
cpp/characters/: Character.cpp
cpp/characters/subclasses/enemies/: Enemy.cpp
cpp/characters/subclasses/player/: Player.cpp
cpp/collision_detector/: CollisionDetector.cpp
cpp/filereader/: FileReader.cpp
cpp/list_manager/: CashListManager.cpp  ChargerListManager.cpp  ChaserListManager.cpp  FollowerListManager.cpp  ProjectileListManager.cpp  RunnerListManager.cpp  ShooterListManager.cpp
cpp/map/: Map.cpp
cpp/map_elements/: MapElement.cpp
cpp/map_elements/subclasses/: Cash.cpp  Floor.cpp
cpp/projectiles/: Projectile.cpp
cpp/projectiles/subclasses/: Bullet.cpp  Hyperbullet.cpp  Laser.cpp  Superbullet.cpp
cpp/random_generator/: RandomGenerator.cpp
cppgame/: CMakeCache.txt  CMakeLists.txt  Game  Main.cpp  Makefile  cmake_install.cmake  constants.hpp
cppgame/headers/characters/: Character.hpp
cppgame/headers/map_elements/: MapElement.hpp
cppgame/headers/projectiles/: Projectile.hpp
cppgame/src/characters/: Character.cpp
cppgame/src/map_elements/: MapElement.cpp
cppgame/src/projectiles/: Projectile.cpp
headers/cash/: Cash.hpp
headers/characters/: Character.hpp
headers/collision_detector/: CollisionDetector.hpp
headers/filereader/: FileReader.hpp
headers/list_manager/: CashListManager.hpp  ChargerListManager.hpp  ChaserListManager.hpp  FollowerListManager.hpp  ProjectileListManager.hpp  RunnerListManager.hpp  ShooterListManager.hpp
headers/map/: Map.hpp
headers/map_elements/: MapElement.hpp
headers/map_elements/subclasses/: Cash.hpp  Floor.hpp
headers/projectiles/: Projectile.hpp
headers/projectiles/subclasses/: Bullet.hpp  Hyperbullet.hpp  Laser.hpp  Superbullet.hpp
headers/random_generator/: RandomGenerator.hpp
savedata/mapstats/: map.txt
(+37 files in other folders)
